@@ -19,6 +19,15 @@
 	* progs/Makefile: Likewise.
 	* LICENSE: Update copyright for this contribution.
 
+	libnss_tcb: Drop use of readdir_r(3).
+	In commit 72ef702a886c8a9749bdc01d89a57cdf0455318c we introduced a
+	replacment for the deprecated readdir_r(3) by using readdir(3) with
+	global thread-local storage.  As almost any operating system released
+	within the last eight years supports thread-local storage natively,
+	there is little to no reason keeping the potentially dangerous
+	fallback to readdir_r(3).
+	* libs/nss.c (_nss_tcb_getspnam_r): Drop use of readdir_r(3).
+
 2024-10-17  Dmitry V. Levin  <ldv at owl.openwall.com>
 
 	pam_tcb: Do not use deprecated _pam_overwrite macro.
